--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,12 @@
 
 <body>
   <app-root></app-root>
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <!-- <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js" nomodule ></script> -->
+  <!-- Ionicons Core -->
+  <!-- <script type="module" src="node_modules/ionicons/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="node_modules/ionicons/dist/ionicons/ionicons.js"></script> -->
+
+
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
